[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/actors/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://library/common/DetectBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=4]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 5
script = ExtResource( 1 )
SPEED = 100
JUMP_HEIGHT = -64

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="eye" type="Area2D" parent="."]
position = Vector2( 0, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="eye"]
position = Vector2( 480, -128 )

[node name="outofrange" type="Timer" parent="."]
one_shot = true

[node name="jumpcasts" type="Node2D" parent="."]
position = Vector2( 0, -64 )

[node name="jumpcast" type="RayCast2D" parent="jumpcasts"]
position = Vector2( 35, 118 )
enabled = true
cast_to = Vector2( 64, 0 )

[node name="jumpmax" type="RayCast2D" parent="jumpcasts"]
position = Vector2( 35, 0 )
enabled = true
cast_to = Vector2( 64, 0 )

[node name="sight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.67029e-05, -1.52588e-05 )
scale = Vector2( 47.7479, 37.7154 )

[node name="idletimer" type="Timer" parent="."]
one_shot = true

[node name="OldSprite" type="Sprite" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="DetectBox" parent="." instance=ExtResource( 2 )]

[node name="Area" parent="DetectBox" index="0"]
collision_layer = 0
collision_mask = 4

[node name="Shape" parent="DetectBox/Area" index="0"]
position = Vector2( 0, -15 )

[node name="Sprite" type="Node2D" parent="."]

[node name="confused" type="Timer" parent="."]
one_shot = true

[node name="CenterPoint" type="Position2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 4 )]

[node name="Area" parent="HitBox" index="0"]
collision_layer = 0
collision_mask = 2

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="Area" parent="HurtBox" index="0"]
collision_layer = 4
collision_mask = 0

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="outofrange" to="." method="_on_outofrange_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="idletimer" to="." method="_on_idletimer_timeout"]
[connection signal="no_targets_remain" from="DetectBox" to="." method="_on_DetectBox_no_targets_remain"]
[connection signal="target_detected" from="DetectBox" to="." method="_on_DetectBox_target_detected"]
[connection signal="timeout" from="confused" to="." method="_on_confused_timeout"]
[connection signal="is_dead" from="HurtBox" to="." method="_on_HurtBox_is_dead"]
[connection signal="took_damage" from="HurtBox" to="." method="_on_HurtBox_took_damage"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="DetectBox"]
[editable path="HitBox"]
[editable path="HurtBox"]
